--- a/fj21-agenda/.settings/org.eclipse.wst.common.component
+++ b/fj21-agenda/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="fj21-agenda">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent/imagens"/>
         <property name="context-root" value="fj21-agenda"/>
         <property name="java-output-path" value="/fj21-agenda/build/classes"/>
     </wb-module>
